# forward-methods

./: Cargo.toml  LICENSE  README.md
src/: implement.rs  lib.rs  model.rs
src/parse/: decl.rs  delegate.rs  method.rs  mod.rs
tests/: fwd_pub_struct.rs  fwd_tuple_struct.rs  option_return.rs  pub_tuple_struct.rs  struct.rs  structs.rs  tuple_struct.rs  tuple_structs.rs
tests/stubs/: mod.rs
