[package]
name = "forward-methods"
version = "0.0.1"
edition = "2021"

authors = ["Pierre Fouilloux <pfxdev@pm.me>"]
description = "A derive macro for forwarding methods from composed objects"
keywords = ["proc_macro", "procmacro", "method", "forwarding", "composition"]
categories = ["rust-patterns"]

repository = "https://github.com/pfouilloux/forward-methods"
readme = "README.md"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
derive_builder = "0.12.0"

[dev-dependencies]
test-case = "3.0"
